<resources>
    <string name="app_name">Tutor_App</string>
    <string name="email">Email/UserName</string>
    <string name="email1">Email</string>
    <string name="user">UserName</string>
    <string name="password">Password</string>
    <string name="Npassword">New Password</string>
    <string name="Cpassword">Confirm Password</string>
    <string name="address">Address</string>
    <string name="contact">Contact No</string>

    <string name="fullname">Full Name</string>
    <string name="iname">Name Of Institute</string>
    <string name="oname">If others please specify</string>
    <string name="conveyance_type">Bike/Car/Bus</string>
    <string name="name">Name</string>
    <string name="fathername">Father/Husband Name</string>
    <string name="mothername">Mother Tongue</string>
    <string name="occupation">Occupation</string>
    <string name="cnic">C.N.I.C Number</string>
    <string name="paddress">Present Address</string>
    <string name="hno">House Number</string>
    <string name="bno">Building Name</string>
    <string name="sno">Street Number</string>
    <string name="blockno">Block Number</string>
    <string name="ano">Area Number</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="cno">City Number</string>
    <string name="country_no">Country Number</string>
    <string name="permanent_address">Permanent Address</string>
    <string name="gender">Gender</string>
    <string name="dob">Date of Birth</string>
    <string name="age">Age</string>
    <string name="nationality">Nationality</string>
    <string name="religion">Religion</string>
    <string name="phone1">Phone#1</string>
    <string name="subject">Subject</string>
    <string name="dos">Date Of Submission</string>
    <string name="phone2">Phone#2</string>
    <string name="phone3">Phone#3</string>
    <string name="mail">Email</string>
    <string name="experience_year">Total Experience</string>
    <string name="cperson">Contact Person</string>
    <string name="profession">Are you a Teacher by Profession?</string>
    <string name="conveyance">Do you have conveyance?</string>g
    <string name="qualification">Qualification</string>
    <string name="add_qualification">Add More Qualification</string>
    <string name="subjects">Subjects/Specialization</string>
    <string name="fees">Fees per Subject</string>
    <string name="institute">Institute/University</string>
    <string name="pyear">Year of Passing</string>
    <string name="grade">Grade/Division</string>
    <string name="entitlement">Job Entitlement</string>
    <string name="organization">Name of Organization</string>
    <string name="from">From</string>
    <string name="till">Till</string>
    <string name="classes">Classes to Track</string>
    <string name="class_title">Add Student Information</string>
    <string name="preffered">Preferred Subjects</string>
    <string name="preferredarea">Preferred Area</string>
    <string name="relation">Relation</string>
    <string name="telephone">Telephone</string>
    <string name="add_reference">Add More Reference </string>

    <string name="rname">Name:  </string>
    <string name="teach_age">Age:   </string>
    <string name="teach_qualification"> Qualification:  </string>
    <string name="experience"> Experience:  </string>
    <string name="classes_name"> Class:  </string>
    <string name="rsubjects">Subjects:  </string>
    <string name="teach_address">Address:   </string>
    <string name="Demo">Demo</string>
    <string name="NoData">No Teachers Available</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dashboard__drawer">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mrs. John</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_student">Student Profile</string>
    <string name="menu_search">Search</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="school">School/College</string>
    <string name="session_year">Session Year</string>
    <string name="info">To add another child to your account you must complete and submit your application first and select add child option to add another child</string>
    <string name="ctype">Enter Class</string>
    <string name="stype">Enter Subject</string>

    <string name="file_thumbnail">File thumbnail</string>
    <string name="uri">Uri : %1$s</string>
    <string name="size">Size :  %1$d</string>
    <string name="mime">Mime: %1$s</string>
    <string name="type">Type : %1$d</string>
    <string name="name1">Name : %1$s</string>
    <string name="bucketname">BucketName : %1$s</string>
</resources>
