<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.tutor_app.Dashboard.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    </fragment>


    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.tutor_app.Dashboard.ui.Teacher.Profile.ProfileTeacher"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_profile_student"
        android:name="com.example.tutor_app.Dashboard.ui.Student.Profile.ProfileStudent"
        android:label="@string/menu_student"
        tools:layout="@layout/fragment_profile_student" />


    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.tutor_app.Dashboard.ui.Student.SearchFragment.FragmentSearch"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />

<!--    <fragment-->
<!--        android:id="@+id/nav_slideshow"-->
<!--        android:name="com.example.tutor_app.Dashboard.ui.slideshow.SlideshowFragment"-->
<!--        android:label="@string/menu_slideshow"-->
<!--        tools:layout="@layout/fragment_slideshow" />-->


</navigation>