<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Dashboard.ui.Student.Profile.ProfileStudent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF">

            <LinearLayout
                android:id="@+id/ln_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Personal Information"
                    android:textAllCaps="false"
                    android:theme="@style/TextStyle"

                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ln_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ln_text"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edt_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="2"
                    android:background="@drawable/editbox"
                    android:hint="@string/fullname"
                    android:padding="10dp"
                    android:theme="@style/EditText" />


                <EditText
                    android:id="@+id/edt_fname"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="2"
                    android:background="@drawable/editbox"
                    android:hint="@string/fathername"
                    android:padding="10dp"
                    android:theme="@style/EditText" />


                <EditText
                    android:id="@+id/edt_phone1"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="2"
                    android:background="@drawable/editbox"
                    android:hint="@string/phone1"


                    android:inputType="number"
                    android:padding="10dp"
                    android:theme="@style/EditText" />

                <EditText
                    android:id="@+id/edt_phone2"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="2"
                    android:background="@drawable/editbox"
                    android:hint="@string/phone2"


                    android:inputType="number"
                    android:padding="10dp"
                    android:paddingLeft="30dp"
                    android:theme="@style/EditText" />

                <EditText
                    android:id="@+id/edt_phone3"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="2"
                    android:background="@drawable/editbox"

                    android:hint="@string/phone3"


                    android:inputType="number"
                    android:padding="10dp"
                    android:paddingLeft="30dp"
                    android:theme="@style/EditText" />

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="2"
                    android:background="@drawable/editbox"


                    android:hint="@string/mail"
                    android:padding="10dp"
                    android:theme="@style/EditText" />

            </LinearLayout>


            <RelativeLayout
                android:id="@+id/btn_class_next"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/ln_login"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_round"
                android:padding="5dp">

                <TextView
                    android:id="@+id/btn_signin_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="Next"
                    android:theme="@style/ButtonTextRound" />

                <ImageView
                    android:id="@+id/btn_signin_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:padding="5dp"
                    android:src="@drawable/ic_arrow_forward_black_24dp" />

            </RelativeLayout>

            <!-- <RelativeLayout
                android:id="@+id/back"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/btn_class_next"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_round"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/back_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="Draft"
                    android:theme="@style/ButtonTextRound" />
            </RelativeLayout> -->
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>