<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    android:background="#FFFFFF"
    tools:context=".Dashboard.ui.Institude.Profile.InstituteFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            >

            <LinearLayout
                android:id="@+id/ln_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAllCaps="false"
                    android:text="Institution Information"
                    android:theme="@style/TextStyle"

                    />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ln_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ln_text"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:weightSum="18">

                <EditText
                    android:id="@+id/edt_institutename"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_weight="2"
                    android:background="@drawable/editbox"
                    android:padding="10dp"
                    android:hint="@string/iname"
                    android:theme="@style/EditText" />


                <RelativeLayout
                    android:id="@+id/itype"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="2"
                    android:background="@drawable/editbox"
                    >
                    <TextView
                        android:id="@+id/spinner_type_textview"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_toLeftOf="@+id/spinner_type_imageview"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:paddingStart="20dp"
                        android:visibility="gone" />

                    <Spinner
                        android:id="@+id/spinner_type"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:dropDownWidth="match_parent"
                        android:background="@null"
                        android:popupBackground="@drawable/popupbackground"
                        />

                    <ImageView
                        android:id="@+id/spinner_type_imageview"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignTop="@id/spinner_type"
                        android:layout_alignEnd="@+id/spinner_type"
                        android:layout_alignRight="@+id/spinner_type"
                        android:layout_alignBottom="@+id/spinner_type"
                        android:src="@drawable/ic_arrow_drop_down_black_24dp"
                        android:theme="@style/Spinner" />
                </RelativeLayout>


                <EditText
                    android:id="@+id/edt_other"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="2"
                    android:background="@drawable/editbox"
                    android:padding="10dp"
                    android:hint="@string/oname"
                    android:visibility="gone"
                    android:theme="@style/EditText" />


                <EditText
                    android:id="@+id/edt_phone1"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="2"
                    android:inputType="number"
                    android:background="@drawable/editbox"
                    android:padding="10dp"
                    android:paddingLeft="30dp"
                    android:hint="@string/phone1"
                    android:theme="@style/EditText" />

                <EditText
                    android:id="@+id/edt_phone2"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="2"
                    android:inputType="number"
                    android:background="@drawable/editbox"
                    android:padding="10dp"
                    android:paddingLeft="30dp"
                    android:hint="@string/phone2"
                    android:theme="@style/EditText" />

                <EditText
                    android:id="@+id/edt_phone3"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="2"
                    android:inputType="number"
                    android:background="@drawable/editbox"
                    android:padding="10dp"
                    android:paddingLeft="30dp"
                    android:hint="@string/phone3"
                    android:theme="@style/EditText" />

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="2"
                    android:background="@drawable/editbox"
                    android:padding="10dp"
                    android:paddingLeft="30dp"
                    android:hint="@string/mail"
                    android:theme="@style/EditText" />

                <EditText
                    android:id="@+id/contact_person"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="2"
                    android:background="@drawable/editbox"
                    android:padding="10dp"
                    android:paddingLeft="30dp"
                    android:hint="@string/cperson"
                    android:theme="@style/EditText" />

            </LinearLayout>


            <RelativeLayout
                android:id="@+id/btn_class_next"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/ln_login"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_round"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_signin_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:gravity="center"
                    android:text="Next"
                    android:theme="@style/ButtonTextRound" />

                <ImageView
                    android:id="@+id/btn_signin_image"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:padding="5dp"
                    android:src="@drawable/ic_arrow_forward_black_24dp" />

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/back"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/btn_class_next"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_round"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/back_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:gravity="center"
                android:text="Draft"
                    android:theme="@style/ButtonTextRound" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>